develop/refactor: active_users & active_segments -> added input json body
